--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,19 @@
 click==8.0.4
 Flask==2.0.3
+greenlet==1.1.2
 itsdangerous==2.1.2
+JayDeBeApi==1.2.3
 Jinja2==3.1.1
+JPype1==1.3.0
 MarkupSafe==2.1.1
+mysql-connector==2.2.9
+numpy==1.22.3
+pandas==1.4.1
+psycopg2-binary==2.9.3
+py-postgresql==1.2.2
+pymssql==2.2.4
+python-dateutil==2.8.2
+pytz==2022.1
+six==1.16.0
+SQLAlchemy==1.4.32
 Werkzeug==2.0.3
